<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <include
       android:id="@+id/toolbar_layout"
       layout="@layout/app_bar" />

   <LinearLayout
       android:id="@+id/newMovieLinearLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
       android:padding="15dp"
       android:layout_marginTop="?attr/actionBarSize"
       android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name"
          android:paddingBottom="20dp">

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:id="@+id/movie_name_input"
             android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/country"
          android:paddingBottom="20dp">

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:id="@+id/movie_country_input"
             android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/genresDropdown"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/genre"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.497"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/priceInput"
          app:layout_constraintVertical_bias="0.099">

         <AutoCompleteTextView
             android:id="@+id/genresAutoCompleteTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none" />
      </com.google.android.material.textfield.TextInputLayout>

      <CheckBox
          android:id="@+id/pegiCheckBox"
          style="@style/Theme.Movies"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:minHeight="48dp"
          android:text="@string/pegi" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/addImage"
             android:layout_gravity="center"
             />
         <ImageView
             android:id="@+id/photo"
             android:layout_width="150dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:background="@color/gray" />
      </LinearLayout>
   </LinearLayout>

   <Button
       android:id="@+id/button_to_save"
       style="@style/Theme.Movies"
       android:textColor="@color/white"
       android:layout_width="200dp"
       android:layout_height="50dp"
       android:text="@string/save"
       app:layout_anchor="@id/newMovieLinearLayout"
       android:layout_marginBottom="15dp"
       app:layout_anchorGravity="bottom|center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>